--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^24.0.0",
     "@types/js-cookie": "^2.2.6",
     "@types/js-sha512": "^0.7.0",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
+    "classnames": "^2.2.6",
     "cogo-toast": "^4.2.3",
     "js-cookie": "^2.2.1",
     "js-sha512": "^0.8.0",
