--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@class101/ui": "^9.0.0-rc33",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -35,8 +37,10 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
